added holding page

--- a/index.htm
+++ b/index.htm
@@ -1,1 +1,38 @@
-Crab.
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Test</title>
+    <link rel="stylesheet" href="skeleton.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="crab.css" media="screen" title="no title" charset="utf-8">
+  </head>
+  <body>
+    <main class="container">
+      <header class="row">
+        <h1>CRAB</h1>
+        <p>Launching soon..</p>
+      </header>
+      <article class="row">
+        <p>Please look back here shortly, all things you need to know about assembling kits for Raspberry Pi etc .</p>
+      </article>
+    </main>
+
+    <script type="text/javascript">
+  WebFontConfig = {
+    google: { families: [ 'Righteous::latin' ] }
+  };
+  (function() {
+    var wf = document.createElement('script');
+    wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
+      '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+    wf.type = 'text/javascript';
+    wf.async = 'true';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(wf, s);
+  })(); </script>
+
+
+
+
+  </body>
+</html>
