--- a/index.htm
+++ b/index.htm
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Test</title>
+    <title>CRAB</title>
     <link rel="stylesheet" href="skeleton.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="crab.css" media="screen" title="no title" charset="utf-8">
   </head>
