Av page mostly done

--- a/index.htm
+++ b/index.htm
@@ -14,22 +14,32 @@
         <h1>CRAB</h1>
         <p>A series of PCBs and kits for DIY freindly projects such as Raspberry Pi, Mico-python, ESP8266 and Arduino</p>
       </header>
+      <article>
 
-      <article class="row">
-        <div class="nine columns">
-          <h2 class="title">Analog Audio Video adaptor hat</h2>
-          <img src="assets/RaspberryPi_Zero_VGA_Audio_Hat_800.png" /><br /><br />
+        <div class="row">
+            <div class="twelve columns">
+              <h2>Analog Audio Video adaptor hat</h2>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="eight columns">
+              <img src="assets/RaspberryPi_Zero_VGA_Audio_Hat_800.png" /><br /><br />
+            </div>
+        </div>
+
+        <div class="row">
             <h5>VGA, Composite and Stereo audio out of your Pi Zero</h5>
             <p>The analogue cap was designed in response to the release of the Raspberry Pi zero. For a low cost it helps to break out the analogue AV outputs from the zero. The analogue ports it provides are stereo audio, composite and VGA. All connectors are aligned to the same edge as the Zero's existing connectors. The board is ideal if you want to utilize a computer monitor, especially if it has built in speakers like many 'multimedia' TFT screens that now cost very little second hand.</p>
             <p>Excluding the composite output it will also work on any Raspberry Pi that has the 40 pin GPIO header (Raspberry Pi A/B+ and the Raspberry Pi 2)</p>
             <ul>
-              <li>More Info</li>
-              <li>Build Instructions</li>
-              <li>Installation Instructions</li>
+              <li><a href="Raspberry_Pi_Analogue_Hat.htm">More Info and Instructions</a></li>
             </ul>
             <input value="Add to Basket" type="submit">
-          </div>
+        </div>
+
       </article>
+    </div>
 
     </main>
 
