submit button error

--- a/index.htm
+++ b/index.htm
@@ -35,7 +35,7 @@
             <ul>
               <li><a href="Raspberry_Pi_Analogue_Hat.htm">More Info and Instructions</a></li>
             </ul>
-            <input value="Add to Basket" type="submit">
+            <input value="Available soon" type="submit">
         </div>
 
       </article>
